--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["airbnb", "prettier", "airbnb", "airbnb-typescript", "prettier"],
+  "extends": ["airbnb", "airbnb", "airbnb-typescript", "prettier"],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
