--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.2.27",
     "@types/react-dom": "^18.2.12",
     "@uiw/react-md-editor": "^3.23.6",
+    "firebase": "^10.4.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
