--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.58",
     "@types/react": "^18.2.27",
+    "@types/react-datepicker": "^4.19.1",
     "@types/react-dom": "^18.2.12",
     "@uiw/react-md-editor": "^3.23.6",
+    "date-fns": "^2.30.0",
     "firebase": "^10.4.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
