--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@uiw/react-md-editor": "^3.23.6",
     "date-fns": "^2.30.0",
     "firebase": "^10.4.0",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^4.21.0",
