--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "firebase": "^10.4.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
@@ -31,6 +30,7 @@
     "recoil-persist": "^5.1.0",
     "styled-components": "^6.0.8",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -54,6 +54,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.200",
+    "@types/uuid": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.51.0",
