--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
     "styled-components": "^6.0.8",
+    "sweetalert2": "^11.9.0",
     "typescript": "^4.9.5",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
