--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fullcalendar/core": "^6.1.9",
     "@fullcalendar/daygrid": "^6.1.9",
     "@fullcalendar/interaction": "^6.1.9",
+    "@fullcalendar/moment": "^6.1.9",
     "@fullcalendar/react": "^6.1.9",
     "@hello-pangea/dnd": "^16.3.0",
     "@testing-library/jest-dom": "^5.17.0",
